# data-lake

./: .gitignore  .mcp.json  .schema_review_session.json  .tmp_validate.sh  .tmp_validate2.sh  CLAUDE.md  EPC_API_UPDATE_PLAN.md  README.md  bigfile.csv  gen_comments.md  instrospect_db.sql  motherduck-export.sql  pyproject.toml  update_prompt.md
.claude/: settings.local.json
.claude/commands/: validate.md
.serena/: project.yml
.serena/memories/: epc_api_update_plan_approved.md  epc_api_update_requirements.md  epc_bugs_and_fixes.md  epc_implementation_progress.md  epc_plan_revisions.md  epc_production_learning.md  epc_production_run_2026-01-02.md  epc_resume_session.md  python_execution_standard.md  schema_documentation_tool_progress.md
archived_sql/: boundaries_staging.sql
docs/: SQL_TRANSFORMATION_PLAN.md  VERIFICATION_PLAN.md  calm-weaving-rain.md  delegated-waddling-sphinx.md  screenshot_trial.md  zany-dazzling-newt.md
src/: __init__.py  boundaries_staging.sql  create_views.sql  main.py  manual_external_load.sql  staging_csv.py  test-schema-creation.sql  test_parquet_hive_ingest.sql
src/extractors/: __init__.py  __main__.py  epc_api_client.py  epc_incremental_update.py  epc_models.py
src/schemas/: epc_domestic_certificates_schema.json  epc_non-domestic_certificates_schema.json
src/tools/: README.md  __init__.py  comment_editor.py  generate_iod_schema.py  schema_documenter.py  verify_prerequisites.py
tests/: __init__.py  conftest.py  test_duckdb_csv_union.py  test_epc_api_client.py  test_epc_incremental_update.py  test_epc_models.py
(+49 files in other folders)
