[project]
name = "data-lake"
version = "0.1.0"
description = "Data lake utilities for data processing and analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "duckdb>=1.4.0",
    "polars>=1.32.0",
    "httpx>=0.27.0",
    "pyyaml",
    "pyarrow",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "click>=8.3.1",
    "rich>=14.2.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

